--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,9 +9,24 @@ on:
       - "*/**"
 
 jobs:
-  build-basenv:
+  build:
     runs-on: ubuntu-latest
     steps:
+      - 
+        name: Free Disk Space (Ubuntu)
+        uses: jlumbroso/free-disk-space@main
+        with:
+          # this might remove tools that are actually needed,
+          # if set to "true" but frees about 6 GB
+          tool-cache: false
+          # all of these default to true, but feel free to set to
+          # "false" if necessary for your workflow
+          android: true
+          dotnet: true
+          haskell: true
+          large-packages: true
+          docker-images: true
+          swap-storage: true
       - 
         name: Set up QEMU
         uses: docker/setup-qemu-action@v2
@@ -36,3 +51,5 @@ jobs:
           push: true
           platform: linux/amd64
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/cotofure:nedo
+          build-args: |
+            PAT=${{secrets.HIEUKNG_ACCESS_TOKEN}}
