chore: add cpu images

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,6 +11,9 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        cuda: [cpu, gpu]
     steps:
       - 
         name: Free Disk Space (Ubuntu)
@@ -44,12 +47,12 @@ jobs:
       - 
         name: Checkout
         uses: actions/checkout@v3
-      - 
-        name: Build image
+      -
+        name: Build CPU image
         uses: docker/build-push-action@v3
         with:
           push: true
-          platform: linux/amd64
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/cotofure:nedo
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/cotofure:nedo-${{matrix.cuda}}
           build-args: |
             PAT=${{secrets.HIEUKNG_ACCESS_TOKEN}}
+            CUDA=${{matrix.cuda}}
